updated widths and heights for images

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -150,19 +150,19 @@
           <!-- Desktop ≥ 1025px -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_392/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
-            media="(min-width: 941px)"
+            media="(min-width: 941px) 50vw, 100vw"
             type="image/avif" />
 
           <!-- Tablet ≥ 769px -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_933,h_538/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
-            media="(min-width: 769px) and (max-width: 940px)"
+            media="(min-width: 769px) and (max-width: 940px)  100vw"
             type="image/avif" />
 
           <!-- Mobile ≤ 768px -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_761,h_439/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
-            media="(min-width: 481px) and (max-width: 768px)"
+            media="(min-width: 481px) and (max-width: 768px)  100vw"
             type="image/avif" />
 
           <!-- Fallback -->
@@ -212,13 +212,13 @@
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_390/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   type="image/avif"
-                  media="(min-width: 1200px)"
+                  media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_337,h_337/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px)"
+                  media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
@@ -238,22 +238,22 @@
             <div class="thumbnails images fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_328/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
-                  media="(min-width: 1200px)"
+                  media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_170,h_146/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px)"
+                  media="(min-width: 481px) and (max-width: 1199px) 100vw, 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_292,h_252/v1743469949/seo-grade_mmztmf.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220,h_189/v1743469949/seo-grade_mmztmf.avif"
                   alt="Tech Trends Blog SEO grade result showing performance and optimization"
-                  width="292"
-                  height="252"
+                  width="220"
+                  height="189"
                   loading="lazy"  
                   fetchpriority="auto"
                   decoding="async"
@@ -268,19 +268,19 @@
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
-                  media="(min-width: 1200px)"
+                  media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_230,h_196/v1747144506/past-meets-future_pmafy7.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px)"
+                  media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222,h_189/v1747144506/past-meets-future_pmafy7.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220,h_189/v1747144506/past-meets-future_pmafy7.avif"
                   alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
-                  width="222"
+                  width="220"
                   height="189"
                   loading="lazy"
                   fetchpriority="low"
@@ -300,9 +300,9 @@
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_230,h_196/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px)"
+                  media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
@@ -328,9 +328,9 @@
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_230,h_196/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px)"
+                  media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
@@ -354,13 +354,13 @@
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_632,h_275/v1746550616/allisonstock-black-logo_yalqqx.avif"
               type="image/avif"
-              media="(min-width: 1200px)"
+              media="(min-width: 1200px) 100vw"
               sizes="100vw"
             />
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_489,h_200/v1746550616/allisonstock-black-logo_yalqqx.avif"
               type="image/avif"
-              media="(min-width: 481px) and (max-width: 1199px)"
+              media="(min-width: 481px) and (max-width: 1199px) 100vw"
               sizes="100vw"
             />
             <img 
