--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -150,19 +150,19 @@
           <!-- Desktop ≥ 1025px -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_392/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
-            media="(min-width: 941px) 50vw, 100vw"
+            media="(min-width: 941px)"
             type="image/avif" />
 
           <!-- Tablet ≥ 769px -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_933,h_538/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
-            media="(min-width: 769px) and (max-width: 940px)  100vw"
+            media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif" />
 
           <!-- Mobile ≤ 768px -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_761,h_439/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
-            media="(min-width: 481px) and (max-width: 768px)  100vw"
+            media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif" />
 
           <!-- Fallback -->
@@ -246,7 +246,7 @@
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px) 100vw, 100vw"
+                  media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
@@ -296,7 +296,7 @@
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
-                  media="(min-width: 1200px)"
+                  media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
@@ -324,7 +324,7 @@
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
-                  media="(min-width: 1200px)"
+                  media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
