--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -389,7 +389,7 @@
                 >explore my portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
           </div>
         </div>
-\    </main>
+    </main>
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
