changed img fallback to be optimized for desktop

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -152,7 +152,7 @@
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_392/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             media="(min-width: 941px)"
             type="image/avif"
-            sizes="(min-width: 1400px) 765px, 100vw"
+            sizes="(min-width: 1400px) 40vw, 100vw"
           />
 
           <!-- Tablet ≥ 769px -->
@@ -174,12 +174,12 @@
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_473,h_320/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
-            width="473"
-            height="320"
+            width="765"
+            height="392"
             fetchpriority="high"
             loading="eager"
             decoding="async"
-            style="aspect-ratio: 473 / 320;"
+            style="aspect-ratio: 765 / 392;"
           />
         </picture>
         <div class="canvas-skills-title">
