updated min-height for menu-grid

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -490,7 +490,6 @@
             fetchpriority="high"
             loading="eager"
             decoding="async"
-            style="aspect-ratio: 765 / 392;"
           />
         </picture>
         <div class="canvas-skills-title">
@@ -543,7 +542,7 @@
                   alt="GitHub logo"
                   width="220"
                   height="220"
-                  loading="lazy"  
+                  loading="auto"  
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -571,7 +570,7 @@
                   alt="Tech Trends Blog SEO grade result showing performance and optimization"
                   width="220"
                   height="189"
-                  loading="lazy"  
+                  loading="auto"  
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -599,8 +598,8 @@
                   alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
                   width="220"
                   height="189"
-                  loading="lazy"
-                  fetchpriority="low"
+                  loading="auto"  
+                  fetchpriority="auto"
                   decoding="async" 
                 />
               </picture>
@@ -627,8 +626,8 @@
                   alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
                   width="222"
                   height="189"
-                  loading="lazy"
-                  fetchpriority="low"
+                  loading="auto"  
+                  fetchpriority="auto"
                   decoding="async" 
                 />
               </picture>
@@ -655,8 +654,8 @@
                   alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
                   width="222"
                   height="189"
-                  fetchpriority="high"
-                  loading="eager"
+                  loading="auto"  
+                  fetchpriority="auto"
                   decoding="async"
                 />
               </picture>
