--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -155,7 +155,7 @@
         align-items: stretch;
         width: 100%;
         max-width: 100vw;
-        height: 395px;
+        height: auto;
         box-sizing: border-box;
         padding: 0.2em;
         background-color: #000;
@@ -180,6 +180,7 @@
       .canvas-skills-grid img {
         width: 100%;
         height: auto;
+        will-change: transform;
         aspect-ratio: 765 / 392;
         object-fit: cover;
         object-position: top center;
@@ -247,7 +248,7 @@
           flex-wrap: nowrap;
           align-items: stretch;
           width: 100%;
-          height: 392px;
+          height: auto;
           max-width: 100vw;
           box-sizing: border-box;
           contain: none;
@@ -288,9 +289,9 @@
           display: flex;
           flex-direction: column;
           width: 100%;
-          height: 731px;
+          height: auto;
           max-width: 100vw;
-          min-height: 4rem;
+          min-height: 45rem;
         }
 
         .canvas-skills-grid picture {
@@ -331,7 +332,7 @@
       @media (max-width:768px) { 
         .canvas-skills-grid {
           min-height: 42.81rem;
-          height: 684px;
+          height: auto;
         }
 
         .canvas-skills-grid picture {
@@ -348,7 +349,7 @@
       @media (max-width: 680px) {
         .canvas-skills-grid {
           min-height: 44.33rem;
-          height: 709px;
+          height: auto;
         }
 
         .canvas-skills-grid picture {
@@ -387,7 +388,7 @@
       @media (min-width:430px) and (max-width:480px) {
         .canvas-skills-grid {
           min-height: 37rem;
-          height: 600px;
+          height: auto;
         }
 
         .canvas-skills-grid picture {
@@ -437,6 +438,7 @@
       @media (max-width: 429px) {
         .canvas-skills-grid {
           min-height: 40rem;
+          height: auto;
         }
 
         .canvas-skills-title {
