--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -485,7 +485,7 @@
 
           <!-- Fallback -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_473,h_320/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_795,h_392/v1742647059/welcome_to_tech_trends_desktop_gxfoz3"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
             width="765"
             height="392"
