--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -256,17 +256,17 @@
           background-color: #000;
           contain: paint;
           padding: 0.2em;
-          min-height: 14.25rem;
+          min-height: 297px;
         }
 
         .canvas-skills-grid picture {
           min-height: 14.25rem;
           width: 407px;
-          height: 391px;
+          height: 291px;
         }
 
         .canvas-skills-grid img {
-          aspect-ratio: 407 / 391;
+          aspect-ratio: 407 / 291;
           border-top: 0.5em solid #000;
           border-left: 0.5em solid black;
           border-right: 0.25em solid #000;
@@ -281,7 +281,8 @@
           border-top: 0.5em solid #000;
           border-right: 0.5em solid black;
           border-left: 0.25em solid #000;
-        
+          min-height: 291px;
+        }
       }
 
       @media (max-width: 940px) { 
@@ -457,7 +458,54 @@
   </head>
     <body class="fonts-loading">
     <header>
-      <div id="nav"></div>
+      <nav role="navigation" aria-label="Main navigation">
+        <div class="nav-logo">
+          <a href="/index.html">
+            <img
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              alt="Logo for Allison Stock Inc"
+              width="160"
+              height="86"
+              loading="eager"
+              fetchpriority="high"
+              decoding="async"
+            />
+          </a>
+        </div>
+
+        <div class="menu-toggle" id="menu-toggle" role="button"   
+          tabindex="0"  aria-label="Open Menu">
+          <img
+            src="/img/hamburger-icon.png"
+            alt="Hamburger Icon Menu"
+            class="hamburger-icon"
+            loading="eager"
+            fetchpriority="high"
+          />
+        </div>
+
+        <div class="nav-links">
+          <ul>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
+          </ul>
+        </div>
+
+        <div class="hamburger-nav-links" id="mobile-menu">
+          <ul>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
+          </ul>
+        </div>
+      </nav>
       <div class="canvas-skills-grid">
         <picture>
           <!-- Desktop ≥ 1025px -->
@@ -465,7 +513,7 @@
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_392/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             media="(min-width: 941px)"
             type="image/avif"
-            sizes="(min-width: 1400px) 40vw, 100vw"
+            sizes="(min-width: 941px) 40vw, 100vw"
           />
 
           <!-- Tablet ≥ 769px -->
@@ -485,10 +533,10 @@
 
           <!-- Fallback -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_795,h_392/v1742647059/welcome_to_tech_trends_desktop_gxfoz3"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_473,h_320/v1742647059/welcome_to_tech_trends_desktop_gxfoz3"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
-            width="765"
-            height="392"
+            width="473"
+            height="320"
             fetchpriority="high"
             loading="eager"
             decoding="async"
@@ -722,7 +770,68 @@
     <div>
       <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
-    <div id="footer"></div>
+    <footer id="nav">
+        <div class="footer-logo">
+          <img       
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto:best,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            alt="Photo of Genny Allison, the web developer and AI content specialist"
+            width="384"
+            height="240"
+            loading="lazy"
+            fetchpriority="low"
+            decoding="async" 
+          />
+        </div>
+        <div class="footer-links" id="footer-links">
+          <ul>
+            <li><a href="/index.html" class="links">my home</a></li>           
+            <li><a href="/pages/about.html" class="links">about me</a></li>
+            <li><a href="/pages/skills.html" class="links">my skills</a></li>
+            <li><a href="/pages/resume.html" class="links">my resume</a></li>
+            <li><a href="/pages/portfolio.html" class="links">my work</a></li> 
+            <li><a href="/pages/contact.html" class="links">contact me</a></li>
+          </ul>
+        </div>
+        <div class="social-media">
+          <ul>
+            <li>
+              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/x-bird-icon.webp" 
+                  alt="X (Twitter) logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/ig-icon.webp" 
+                  alt="Instagram logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/linkedin-icon.webp" 
+                  alt="LinkedIn logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/git-icon.webp" 
+                  alt="GitHub logo"width: 2.5rem;
+                  height: 2.5rem;
+                >
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     <script src="/assets/script.js" defer></script>
   </body>
 </html>      
