--- a/index.html
+++ b/index.html
@@ -32,7 +32,54 @@
   </head>
   <body>
     <header>
-      <div id="nav"></div>
+      <nav role="navigation" aria-label="Main navigation">
+        <div class="nav-logo">
+          <a href="/index.html">
+            <img
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              alt="Logo for Allison Stock Inc"
+              width="160"
+              height="86"
+              loading="eager"
+              fetchpriority="high"
+              decoding="async"
+            />
+          </a>
+        </div>
+
+        <div class="menu-toggle" id="menu-toggle" role="button"   
+          tabindex="0"  aria-label="Open Menu">
+          <img
+            src="/img/hamburger-icon.png"
+            alt="Hamburger Icon Menu"
+            class="hamburger-icon"
+            loading="eager"
+            fetchpriority="high"
+          />
+        </div>
+
+        <div class="nav-links">
+          <ul>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
+          </ul>
+        </div>
+
+        <div class="hamburger-nav-links" id="mobile-menu">
+          <ul>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <main>
       <section>
@@ -90,7 +137,68 @@
       </section>
       <section>
       <div class="black-border"></div>
-      <div id="footer"></div>
+      <footer id="nav">
+        <div class="footer-logo">
+          <img       
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto:best,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            alt="Photo of Genny Allison, the web developer and AI content specialist"
+            width="384"
+            height="240"
+            loading="lazy"
+            fetchpriority="low"
+            decoding="async" 
+          />
+        </div>
+        <div class="footer-links" id="footer-links">
+          <ul>
+            <li><a href="/index.html" class="links">my home</a></li>           
+            <li><a href="/pages/about.html" class="links">about me</a></li>
+            <li><a href="/pages/skills.html" class="links">my skills</a></li>
+            <li><a href="/pages/resume.html" class="links">my resume</a></li>
+            <li><a href="/pages/portfolio.html" class="links">my work</a></li> 
+            <li><a href="/pages/contact.html" class="links">contact me</a></li>
+          </ul>
+        </div>
+        <div class="social-media">
+          <ul>
+            <li>
+              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/x-bird-icon.webp" 
+                  alt="X (Twitter) logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/ig-icon.webp" 
+                  alt="Instagram logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/linkedin-icon.webp" 
+                  alt="LinkedIn logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/git-icon.webp" 
+                  alt="GitHub logo"width: 2.5rem;
+                  height: 2.5rem;
+                >
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     </main>
       <div class="back-to-top">
         <button id="back-to-top" onclick="scrollToTop()">back to top</button>
