--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -141,319 +141,183 @@
       }
     </script>
     <style>
-      .canvas-skills-title h1,
-      .canvas-skills-title h2 {
-        font-family: Georgia, serif;
-        font-weight: 400;
-        height: auto;
-        text-align: center;
-      }
-
       .canvas-skills-grid {
         display: flex;
-        flex-wrap: nowrap;
+        flex-direction: row;
         align-items: stretch;
+        justify-content: space-between;
         width: 100%;
         max-width: 100vw;
-        height: auto;
-        box-sizing: border-box;
-        padding: 0.2em;
         background-color: #000;
         overflow: hidden;
-        min-height: 14.68rem;
+        box-sizing: border-box;
+        padding: 0.5rem;
+        min-height: 200px;
       }
 
       .canvas-skills-grid picture {
         flex: 0 0 40%;
         max-width: 40%;
         min-width: 40%;
-        min-height: 24.5rem;
-        width: 765px;
-        height: 392px;
         display: flex;
         align-items: stretch;
         justify-content: center;
-        contain: layout paint;
-        background-color: black;
+        background-color: #000;
+        box-sizing: border-box;
       }
 
       .canvas-skills-grid img {
         width: 100%;
         height: auto;
-        will-change: transform;
-        aspect-ratio: 765 / 392;
-        object-fit: cover;
-        object-position: top center;
+        object-fit: contain; /* keeps full image visible */
+        object-position: center;
         display: block;
+        aspect-ratio: 189 / 200;
         border-top: 1em solid #000;
         border-left: 1em solid #000;
         border-right: 0.5em solid #000;
-        border-bottom: 1em solid black;
+        border-bottom: 1em solid #000;
+        will-change: transform;
       }
 
       img {
         display: block;
       }
 
-      img[fetchpriority=high] {
+      img[fetchpriority="high"] {
         contain: layout paint;
         content-visibility: auto;
       }
 
+      /* === TEXT CONTAINER === */
       .canvas-skills-title {
-        background-color: white;
+        flex: 0 0 60%;
+        max-width: 60%;
+        min-width: 60%;
+        background-color: #fff;
         border: 1em solid #000;
         border-left: 0.5em solid #000;
+        box-sizing: border-box;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        flex-basis: 60%;
-        max-width: 60%;
-        min-width: 60%;
-        height: auto;
-        max-height: 100%;
         contain: layout;
         padding: clamp(0.5rem, 2vw, 1.5rem);
-        min-height: 14.25rem;
+        min-height: 200px;
       }
 
       .canvas-skills-title h1,
       .canvas-skills-title h2 {
-        text-align: center;
         font-family: Georgia, 'Times New Roman', serif;
         font-weight: normal;
         font-style: normal;
-        line-height: 1.6;
+        text-align: center;
+        line-height: 1.4;
         font-display: swap;
+        margin: 0;
       }
 
       .canvas-skills-title h1 {
-        font-size: clamp(2rem, 3.5vw, 4rem);
-        line-height: 1.5;
-        height: 5rem;
+        font-size: clamp(1.5rem, 4.5vw, 2.5rem);
+        line-height: 1.4;
+        height: auto;
         overflow: hidden;
       }
 
       .canvas-skills-title h2 {
-        font-size: clamp(1.5rem, 3vw, 4rem);
-        line-height: 1.4;
-        height: 4rem;
+        font-size: clamp(1.1rem, 3.5vw, 2rem);
+        line-height: 1.3;
+        height: auto;
         overflow: hidden;
       }
 
-      @media (max-width:1024px) { 
-        .canvas-skills-grid {
-          display: flex;
-          flex-wrap: nowrap;
-          align-items: stretch;
-          width: 100%;
-          height: auto;
-          max-width: 100vw;
-          box-sizing: border-box;
-          contain: none;
-          overflow: hidden;
-          background-color: #000;
-          contain: paint;
-          padding: 0.2em;
-          min-height: 297px;
-        }
 
-        .canvas-skills-grid picture {
-          min-height: 14.25rem;
-          width: 407px;
-          height: 291px;
+      /* === MEDIA QUERIES === */
+
+      /* Tablets: 769px–1024px */
+      @media (min-width: 769px) and (max-width: 1024px) {
+        .canvas-skills-grid {
+          padding: 0.4rem;
+          min-height: 240px;
         }
 
         .canvas-skills-grid img {
-          aspect-ratio: 407 / 291;
-          border-top: 0.5em solid #000;
-          border-left: 0.5em solid black;
-          border-right: 0.25em solid #000;
+          aspect-ratio: 189 / 200;
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title {
+          min-height: 240px;
+          border-width: 0.5em;
+        }
+      }
+
+      /* Mobile landscape & phablets: 481px–768px */
+      @media (min-width: 481px) and (max-width: 768px) {
+        .canvas-skills-grid {
+          min-height: 200px;
+          padding: 0.3rem;
+        }
+
+        .canvas-skills-grid picture {
+          min-width: 40%;
+        }
+
+        .canvas-skills-grid img {
+          aspect-ratio: 189 / 200;
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title {
+          min-height: 200px;
+          padding: 0.5rem;
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title h1 {
+          font-size: 1.4rem;
+        }
+
+        .canvas-skills-title h2 {
+          font-size: 1.1rem;
+        }
+      }
+
+      /* Smallest mobile screens ≤ 480px */
+      @media (max-width: 480px) {
+        .canvas-skills-grid {
+          min-height: 145px;
+          padding: 0.25rem;
+        }
+
+        .canvas-skills-grid picture {
+          min-width: 40%;
+        }
+
+        .canvas-skills-grid img {
+          aspect-ratio: 189 / 145;
           width: 100%;
           height: auto;
+          border-width: 0.5em;
           object-fit: cover;
-          display: block;
-
         }
 
         .canvas-skills-title {
-          border-top: 0.5em solid #000;
-          border-right: 0.5em solid black;
-          border-left: 0.25em solid #000;
-          min-height: 291px;
-        }
-      }
-
-      @media (max-width: 940px) { 
-        .canvas-skills-grid {
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-          height: auto;
-          max-width: 100vw;
-          min-height: 45rem;
-        }
-
-        .canvas-skills-grid picture {
-          width: 100%;
-          max-width: 100vw;
-          min-height: 27.43rem;
-        }
-
-        .canvas-skills-grid img {
-          width: 100%;
-          height: auto;
-          display: block;
-          aspect-ratio: 933 / 538;
-          object-fit: cover;
-        }
-
-        .canvas-skills-title {
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-          max-width: 100vw;
-          height: auto;
-          border: 1em solid black;
-          min-height: 17.81;
+          padding: 0.25rem;
+          min-height: 145px;
+          border-width: 0.5em;
         }
 
         .canvas-skills-title h1 {
-          font-size: 7vw;
-          line-height: 1.6;
+          font-size: 1.2rem;
         }
 
         .canvas-skills-title h2 {
-          font-size: 5vw;
-          line-height: 1.4;
+          font-size: 1rem;
         }
       }
 
-      @media (max-width:768px) { 
-        .canvas-skills-grid {
-          min-height: 42.81rem;
-          height: auto;
-        }
-
-        .canvas-skills-grid picture {
-          min-height: 27.437rem;
-          width: 761px;
-          height: 439px;
-        }
-
-        .canvas-skills-grid img {
-          aspect-ratio: 761 / 439;
-        }
-      }
-
-      @media (max-width: 680px) {
-        .canvas-skills-grid {
-          min-height: 44.33rem;
-          height: auto;
-        }
-
-        .canvas-skills-grid picture {
-          min-height: 27.562;
-          width: 673px;
-          height: 441px;
-        }
-
-        .canvas-skills-grid img {
-          aspect-ratio: 673 / 441;
-        }
-
-        .canvas-skills-title {
-          padding: 0;
-          height: 220px;
-          max-height: 220px;
-          width: 90%;
-          max-width: 90vw;
-          margin: 1em auto;
-          padding: 0.3em;
-        }
-
-        .canvas-skills-title h1 {
-          padding: 0;
-          line-height: 1.5;
-          font-size: 3rem;
-        }
-
-        .canvas-skills-title h2 {
-          padding: 0;
-          line-height: 1.3;
-          font-size: 2.5rem;
-        }
-      } 
-
-      @media (min-width:430px) and (max-width:480px) {
-        .canvas-skills-grid {
-          min-height: 37rem;
-          height: auto;
-        }
-
-        .canvas-skills-grid picture {
-          min-height: 20rem;
-          width: 473px;
-          height: 320px;
-        }
-
-        .canvas-skills-grid img {
-          aspect-ratio: 473 / 320;
-        }
-
-        .canvas-skills-title {
-          border: 0.1em solid black;
-        }
-
-        .canvas-skills-grid img {
-          border: 1em solid black;
-        }
-
-        .canvas-skills-title {
-          height: auto;
-          width: 90%;
-          max-width: 90vw;
-          margin: 1em auto 2em;
-        }
-
-        .canvas-skills-title h1,
-        .canvas-skills-title h2 {
-          padding: 0;
-          height: auto;
-          width: 100%;
-        }
-
-        .canvas-skills-title h1 {
-          font-size: 2.5rem;
-          line-height: 1.8;
-          padding: 0.2em;
-        }
-
-          .canvas-skills-title h2 {
-          font-size: 2rem;
-          line-height: 1.6
-        }
-      }
-
-      @media (max-width: 429px) {
-        .canvas-skills-grid {
-          min-height: 40rem;
-          height: auto;
-        }
-
-        .canvas-skills-title {
-          max-height: 220px;
-        }
-
-        .canvas-skills-title h1 {
-          font-size: 2.5rem;
-        }
-
-        .canvas-skills-title h2 {
-          font-size: 2rem;
-        }
-      }
     </style>
   </head>
     <body class="fonts-loading">
@@ -513,7 +377,7 @@
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_392/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             media="(min-width: 941px)"
             type="image/avif"
-            sizes="(min-width: 941px) 40vw, 100vw"
+            sizes="(min-width: 941px)"
           />
 
           <!-- Tablet ≥ 769px -->
@@ -521,22 +385,22 @@
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_933,h_538/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
-            sizes="(min-width: 769px) and (max-width: 940px) 933px, 100vw"
+            sizes="(min-width: 769px) and (max-width: 940px)"
           />
           <!-- Mobile ≤ 768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_761,h_439/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_304,h_200/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
-            sizes="(min-width: 481px) and (max-width: 768px) 761px, 100vw"
+            sizes="(min-width: 481px) and (max-width: 768px)"
           />
 
           <!-- Fallback -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_473,h_320/v1742647059/welcome_to_tech_trends_desktop_gxfoz3"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_378,h_290/v1742647059/welcome_to_tech_trends_desktop_gxfoz3"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
-            width="473"
-            height="320"
+            width="189"
+            height="145"
             fetchpriority="high"
             loading="eager"
             decoding="async"
