updated preload links

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -22,7 +22,7 @@
       fetchpriority="high"
     />
 
-    <!-- ✅ Tablet: 769px–940px  -->
+    <!-- ✅ Tablet: 769px–940px -->
     <link
       rel="preload"
       as="image"
@@ -32,26 +32,26 @@
       fetchpriority="high"
     />
 
-
     <!-- ✅ Mobile: 481px–768px -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_761,h_439/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_304,h_200/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
     />
 
-    <!-- ✅ Mobile Fallback: ≤480px (must match fallback <img>!) -->
+    <!-- ✅ Mobile fallback: ≤480px (MUST match fallback <img>) -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_473,h_320/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_378,h_290/v1742647059/welcome_to_tech_trends_desktop_gxfoz3"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
     />
+
 
     <link
       class="tab-logo"
