--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -256,7 +256,7 @@
       /* Mobile landscape & phablets: 481px–768px */
       @media (min-width: 481px) and (max-width: 768px) {
         .canvas-skills-grid {
-          min-height: 200px;
+          min-height: 150px;
           padding: 0.3rem;
         }
 
@@ -265,12 +265,12 @@
         }
 
         .canvas-skills-grid img {
-          aspect-ratio: 189 / 200;
+          aspect-ratio: 189 / 135;
           border-width: 0.5em;
         }
 
         .canvas-skills-title {
-          min-height: 200px;
+          min-height: 135px;
           padding: 0.5rem;
           border-width: 0.5em;
         }
@@ -287,7 +287,7 @@
       /* Smallest mobile screens ≤ 480px */
       @media (max-width: 480px) {
         .canvas-skills-grid {
-          min-height: 145px;
+          min-height: 135px;
           padding: 0.25rem;
         }
 
@@ -408,7 +408,7 @@
         </picture>
         <div class="canvas-skills-title">
           <h1>a canvas of code:</h1>
-          <h2>showcasing the craft</h2>
+          <h2 >showcasing the craft</h2>
         </div>
       </div>
     </header>
@@ -418,7 +418,7 @@
           <h2>tech trends</h2>
         </div>
         <article class="resume-summary" id="section1">
-          <h2>
+          <h2 style="contain: layout paint; will-change: transform;">
             AI Content Creator & SEO Specialist Portfolio Project
           </h2>
           <p>
