--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -413,6 +413,8 @@
       </div>
     </header>
     <main class="about-me" id="projects">
+      <div class="projects-placeholder" aria-hidden="true"></div>
+      <div class="projects-content fonts-loaded">
         <div class="resume-date fancy-border project-title" id="description">
           <h2>project 1 | the website</h2>
           <h2>tech trends</h2>
@@ -421,7 +423,7 @@
           <h2 style="contain: layout paint; will-change: transform;">
             AI Content Creator & SEO Specialist Portfolio Project
           </h2>
-          <p>
+          <p class="lcp-title">
             Tech Trends Blog merges creative content with cutting-edge web development. Using powerful tools like <strong>ChatGPT</strong>, <strong>Midjourney</strong>, and <strong>Relume.io</strong>, I’ve built a platform that delivers the latest in technology trends while ensuring a fast, user-friendly experience, optimized for SEO and performance across all devices.
           </p>
           <p>
@@ -594,14 +596,15 @@
               sizes="100vw"
             />
             <img 
-              src="/img/allisonstock-black-logo-mobile.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_240,h_150,c_fill,g_auto/allisonstock-logo_xgohg9.avif" 
+              width="240" 
+              height="150" 
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              width="267"
-              height="112"
-              loading="lazy"
-              fetchpriority="low"
+              loading="lazy" 
+              fetchpriority="low" 
               decoding="async" 
             />
+
           </picture> 
           <div class="author-bio-text">
             <h3>Partner with an AI Content Specialist & Web Developer</h3>
@@ -619,6 +622,7 @@
                 >explore my portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
           </div>
         </div>
+      </div>
     </main>
     <div id="side-nav" class="hidden">
       <ul>
