updated footer logo

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -442,22 +442,22 @@
             <div class="thumbnails fancy-border-img">
               <picture class="github-container">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_390/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220,h_220/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  src="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   alt="GitHub logo"
-                  width="220"
-                  height="220"
+                  width="222"
+                  height="189"
                   loading="auto"  
                   fetchpriority="auto"
                   decoding="async"
@@ -470,21 +470,21 @@
             <div class="thumbnails images fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_328/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,780/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220,h_189/v1743469949/seo-grade_mmztmf.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1743469949/seo-grade_mmztmf.avif"
                   alt="Tech Trends Blog SEO grade result showing performance and optimization"
-                  width="220"
+                  width="222"
                   height="189"
                   loading="auto"  
                   fetchpriority="auto"
@@ -498,21 +498,21 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747144506/past-meets-future_pmafy7.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1747144506/past-meets-future_pmafy7.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220,h_189/v1747144506/past-meets-future_pmafy7.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747144506/past-meets-future_pmafy7.avif"
                   alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
-                  width="220"
+                  width="222"
                   height="189"
                   loading="auto"  
                   fetchpriority="auto"
@@ -526,19 +526,19 @@
             <div class="thumbnails images fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222,h_189/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
                   width="222"
                   height="189"
@@ -554,19 +554,19 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780,/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
-                  media="(min-width: 1200px) 100vw"
+                  media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_458,h_393/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px) 100vw"
+                  media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222,h_189/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
                   width="222"
                   height="189"
@@ -584,19 +584,19 @@
         <div class="author-bio-container fancy-border-img" id="author-bio">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1400,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_820,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_594,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
               width="297" 
               height="148" 
               alt="Photo of Genny Allison, the web developer and AI content specialist"
@@ -639,15 +639,29 @@
     </div>
     <footer id="nav">
         <div class="footer-logo">
-          <img       
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto:best,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            alt="Photo of Genny Allison, the web developer and AI content specialist"
-            width="384"
-            height="240"
-            loading="lazy"
-            fetchpriority="low"
-            decoding="async" 
-          />
+          <picture> 
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_786,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 1200px)"
+              sizes="100vw"
+            />
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_736,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 481px) and (max-width: 1199px)"
+              sizes="100vw"
+            />
+            <img       
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              width="384"
+              height="240"
+              loading="lazy"
+              fetchpriority="low"
+              decoding="async" 
+            />
+          </picture>
         </div>
         <div class="footer-links" id="footer-links">
           <ul>
