updated author-img and placehodler

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -423,7 +423,7 @@
           <h2 style="contain: layout paint; will-change: transform;">
             AI Content Creator & SEO Specialist Portfolio Project
           </h2>
-          <p class="lcp-title">
+          <p class="lcp-title" style="font-family: system-ui, sans-serif; font-size: 1.2rem; margin: 1em 0;">
             Tech Trends Blog merges creative content with cutting-edge web development. Using powerful tools like <strong>ChatGPT</strong>, <strong>Midjourney</strong>, and <strong>Relume.io</strong>, I’ve built a platform that delivers the latest in technology trends while ensuring a fast, user-friendly experience, optimized for SEO and performance across all devices.
           </p>
           <p>
