fixed syntax error

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -46,7 +46,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_378,/v1742647059/welcome_to_tech_trends_desktop_gxfoz3"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_378,/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -152,7 +152,7 @@
         box-sizing: border-box;
         padding: 0.5rem;
         min-height: 200px;
-        max-height: 392px;
+        max-height: 400px;
       }
 
       .canvas-skills-grid picture {
@@ -172,7 +172,7 @@
         object-fit: cover; /* keeps full image visible */
         object-position: center;
         display: block;
-        aspect-ratio: 761 / 376;
+        aspect-ratio: 761 / 400;
         border-top: 1em solid #000;
         border-left: 1em solid #000;
         border-right: 0.5em solid #000;
@@ -397,7 +397,7 @@
 
           <!-- Fallback -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_378/v1742647059/welcome_to_tech_trends_desktop_gxfoz3"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_378/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
             width="189"
             height="145"
